--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 
             <div class="caixa-menor">
-                <img class="img-previsao" src="" alt="icone-info-tempo">
+                <img class="img-previsao" src="https://openweathermap.org/img/wn/04n.png" alt="icone-info-tempo">
                 <p class="texto-previsao">Nublado</p>
             </div>
 
